Refactor: Login page design with 3D illustration and fix log reading 500 error

--- a/src/app/pages/dashboard/components/patron-dashboard.component.html
+++ b/src/app/pages/dashboard/components/patron-dashboard.component.html
@@ -193,7 +193,7 @@
                             'bg-green-500': getIslemClass(islem.islem) === 'success',
                             'bg-red-500': getIslemClass(islem.islem) === 'danger',
                             'bg-blue-500': getIslemClass(islem.islem) === 'info',
-                            'bg-yellow-500': getIslemClass(islem.islem) === 'warning'
+                            'bg-yellow-500': getIslemClass(islem.islem) === 'warn'
                         }">
                             <i class="pi" [ngClass]="getIslemIcon(islem.islem)"></i>
                         </div>
@@ -228,7 +228,7 @@
                             <i class="pi pi-exclamation-circle text-yellow-500"></i>
                             <span>Acil Onay Bekleyenler</span>
                         </div>
-                        <p-tag [value]="dashboard.onayBekleyenler.toplamSayi.toString()" severity="warning"
+                        <p-tag [value]="dashboard.onayBekleyenler.toplamSayi.toString()" severity="warn"
                             [rounded]="true"></p-tag>
                     </div>
                     <div class="p-4">
