--- a/src/app/pages/vardiya/components/vardiya-listesi/vardiya-listesi.component.html
+++ b/src/app/pages/vardiya/components/vardiya-listesi/vardiya-listesi.component.html
@@ -506,8 +506,7 @@
                                         <p-tag *ngIf="item.farkDurum === 'UYUMLU'" value="Uyumlu"
                                             severity="success"></p-tag>
                                         <p-tag *ngIf="item.farkDurum === 'ACIK'" value="Açık" severity="danger"></p-tag>
-                                        <p-tag *ngIf="item.farkDurum === 'FAZLA'" value="Fazla"
-                                            severity="warning"></p-tag>
+                                        <p-tag *ngIf="item.farkDurum === 'FAZLA'" value="Fazla" severity="warn"></p-tag>
                                     </td>
                                 </tr>
                             </ng-template>
